# rss-intelligence

./: .debug  README.md  feeds.yaml  pyproject.toml
.news_cache/: state.json
src/news/: __init__.py  cache.py  cli.py  cluster.py  config.py  dedupe.py  feeds.py  filter.py  models.py  ollama_client.py  render.py  summarize.py
src/rss_intelligence.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: conftest.py  desc  test_cache_integration.py  test_cli.py  test_cluster.py  test_config.py  test_dedupe.py  test_feeds.py  test_filter.py  test_ollama_client.py  test_render.py  test_summarize.py
